# code-composer

./: .gitignore  README.md  pyproject.toml  shell.nix
code_composer/: __init__.py  __main__.py  bass.py  cli.py  composer.py  config_loader.py  durations.py  exporter.py  melody.py  motif.py  rhythms.py  structures.py  styles.py  theory.py
code_composer/frontend/: __init__.py  c.py  lexer.py  python.py
config/: motifs.yml  scales.yml
config/bass/: patterns_3beat.yml  patterns_4beat.yml
config/progressions/: arabic.yml  dorian.yml  gothic.yml  gypsy.yml  indian.yml  jazz.yml  major.yml  minor.yml  pentatonic.yml  xinjiang.yml
config/rhythms/: patterns_3beat.yml  patterns_4beat.yml
config/schemas/: motifs.schema.json  progressions.schema.json  rhythms.schema.json  scales.schema.json  style.schema.json
config/styles/: arabic.yml  chinese.yml  classic.yml  default.yml  gothic.yml  gypsy.yml  happy.yml  indian.yml  japanese.yml  jazz.yml  minuet.yml  soviet.yml  test.yml  waltz.yml  xinjiang.yml
examples/: demo.py  factorial.py  fibonacci.c
tests/: test_config_loader.py  validate_rhythms.py
